<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDEDE3"
    tools:context=".ChangePasswordActivity">

    <RelativeLayout
        android:id="@+id/changepasswordToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/snippet_change_password_toolbar"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/changepasswordToolbar"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:paddingHorizontal="30dp"
        android:paddingVertical="75dp">

        <EditText
            android:id="@+id/txt_ChangePwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="20dp"
            android:hint="New Password"
            android:inputType="textPassword"
            android:background="@drawable/edittext_background"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/txt_ChangePwd2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="20dp"
            android:hint="New Password (Again)"
            android:inputType="textPassword"
            android:background="@drawable/edittext_background"
            android:padding="10dp"/>

    <EditText
        android:id="@+id/txt_CurrentPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="20dp"
        android:hint="Current Password"
        android:inputType="textPassword"
        android:background="@drawable/edittext_background"
        android:padding="10dp"/>

        <Button
            android:id="@+id/btnChangePwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:layout_marginRight="75dp"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="20dp"
            android:text="Change"
            android:background="@drawable/button_shape"/>

    </LinearLayout>

</RelativeLayout>