<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_delete_comment"
        android:icon="@drawable/ic_delete_comment"
        android:contentDescription="deleteComment"
        android:title="Delete Comment"
        app:showAsAction="always|withText"
        />
</menu>