...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/notificatonTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="@string/notification_txt"
                    android:textSize="16sp"
...
            </LinearLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:id="@+id/container_notification"></FrameLayout>

        </RelativeLayout>

        <include layout="@layout/bottom_navigation_bar" />
    </RelativeLayout>

...
