...
            android:textColor="@color/colorPrimaryDark"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:id="@+id/comment_notification"
            android:maxLines="5"></TextView>
        
    </LinearLayout>
    
    <Utils.SquareImageView
        android:layout_width="50dp"
...
